force-app/main/default/objects/Showroom__c/Showroom__c.object-meta.xml
<CustomObject>
    <label>Showroom</label>
    <nameField>
        <label>Car Showroom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showroom</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>