force-app/main/default/objects/Showroom__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Car Showroom address</inlineHelpText>
    <label>Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>