force-app/main/default/objects/Showroom__c/fields/Link_To_Salon_Website__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Salon_Website__c</fullName>
    <inlineHelpText>Link to salon&apos;s website</inlineHelpText>
    <label>Link To Salon Website</label>
    <type>Url</type>
</CustomField>