force-app/main/default/objects/Showroom__c/validationRules/Open_day_must_be_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_day_must_be_approved</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Open day&quot;)</errorConditionFormula>
    <errorMessage>Open day must be approved by manager!</errorMessage>
</ValidationRule>