force-app/main/default/objects/Showroom__c/listViews/Cars.listView-meta.xml
<ListView>
    <fullName>Cars</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Cars</value>
    </filters>
    <label>Cars</label>
</ListView>