force-app/main/default/objects/Showroom__c/listViews/Specialized_cars.listView-meta.xml
<ListView>
    <fullName>Specialized_cars</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Specialized cars</value>
    </filters>
    <label>Specialized cars</label>
</ListView>